# Python-Flask-Website

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: deployment.yml  development.yml
scripts/: deploy-image  publish-image  security-report
src/: app.py
src/routes/: health.py  upload.py
src/services/: service.py
src/static/css/: styles.css  styles.css.map
src/templates/: index.html
src/templates/pages/: compare.html
tests/: conftest.py  test_health.py  test_upload.py
