[project]
description = ""
name = "Python-Flask-Website"
readme = "README.md"
requires-python = ">=3.10"

[tool.ruff]
extend-include = ["*.ipynb"]
output-format = "text"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.mccabe]
max-complexity = 50

[tool.coverage.run]
omit = [
    "*/_init_.py",
    "/tests/",
]
